force-app/main/default/objects/Quote_Document_Row__c/Quote_Document_Row__c.object-meta.xml
<CustomObject>
    <description>One row within a generated table. Covers group headers, detail rows, subtotals, section totals and grand totals. Grouping labels and product names are stored as snapshots so a generated document remains reproducible.</description>
    <label>Quote Document Row</label>
    <nameField>
        <displayFormat>QDR-{0000000000}</displayFormat>
        <label>Row Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Document Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>