force-app/main/default/objects/Quote_Document_Row__c/fields/Allowance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Amount__c</fullName>
    <inlineHelpText>Allowance or document-level reduction supplied by the approved source for this Row.</inlineHelpText>
    <label>Allowance Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>