force-app/main/default/objects/Quote_Document_Row__c/fields/Amount_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Amount_Baseline__c</fullName>
    <inlineHelpText>The BEFORE amount on a comparison row - what this position was worth on the baseline being compared against. The CHANGE measures could already express the difference and the result, but not the starting point, and recovering it as "after minus difference" is a subtraction no renderer is allowed to perform.</inlineHelpText>
    <label>Baseline Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>