force-app/main/default/objects/Quote_Document_Row__c/fields/Amount_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Amount_Cancellation__c</fullName>
    <inlineHelpText>Total value removed through cancellation. Stored as a negative number.</inlineHelpText>
    <label>Cancellation Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>