force-app/main/default/objects/Quote_Document_Row__c/fields/Amount_Net__c.field-meta.xml
<CustomField>
    <fullName>Amount_Net__c</fullName>
    <inlineHelpText>Total after all discounts. Sum of SBQQ__NetTotal__c. On a grand total row of a table that excludes optional products, this reconciles to the Quote's Net Amount.</inlineHelpText>
    <label>Net Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>