force-app/main/default/objects/Quote_Document_Row__c/fields/Amount_Net_New__c.field-meta.xml
<CustomField>
    <fullName>Amount_Net_New__c</fullName>
    <inlineHelpText>Total value classified as new business or expansion. Positive.</inlineHelpText>
    <label>Net New Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>