force-app/main/default/objects/Quote_Document_Row__c/fields/Amount_Regular__c.field-meta.xml
<CustomField>
    <fullName>Amount_Regular__c</fullName>
    <inlineHelpText>Total after discount schedules but before manual and additional discounts. Sum of SBQQ__RegularTotal__c.</inlineHelpText>
    <label>Regular Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>