force-app/main/default/objects/Quote_Document_Row__c/fields/Amount_Replacement_Added__c.field-meta.xml
<CustomField>
    <fullName>Amount_Replacement_Added__c</fullName>
    <inlineHelpText>Total value of products added as part of a replacement. Positive.</inlineHelpText>
    <label>Replacement Added Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>