force-app/main/default/objects/Quote_Document_Row__c/fields/Amount_Replacement_Removed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Replacement_Removed__c</fullName>
    <inlineHelpText>Total value of products removed as part of a replacement. Stored as a negative number. Not counted as cancellation.</inlineHelpText>
    <label>Replacement Removed Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>