force-app/main/default/objects/Quote_Document_Row__c/fields/Blended_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Blended_Unit_Price__c</fullName>
    <inlineHelpText>Net amount divided by quantity, computed rather than summed. Unit prices do not add: three products at $10, $20 and $30 a unit are not a $60 unit price. Blank when the quantity is zero.</inlineHelpText>
    <label>Blended Unit Price</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>