force-app/main/default/objects/Quote_Document_Row__c/fields/Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charge_Amount__c</fullName>
    <inlineHelpText>Freight, fee, or other positive charge supplied by the approved source for this Row.</inlineHelpText>
    <label>Charge Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>