force-app/main/default/objects/Quote_Document_Row__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <inlineHelpText>Charge type as it appeared when generated: One-Time, Recurring or Usage. Blank on rows that combine several charge types.</inlineHelpText>
    <label>Charge Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>