force-app/main/default/objects/Quote_Document_Row__c/fields/Customer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Number__c</fullName>
    <inlineHelpText>The customer's supplied item or part reference for this Row.</inlineHelpText>
    <label>Customer Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>