force-app/main/default/objects/Quote_Document_Row__c/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <inlineHelpText>Customer-facing delivery, site, or service location for this Row.</inlineHelpText>
    <label>Delivery Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>