force-app/main/default/objects/Quote_Document_Row__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <inlineHelpText>The exact text shown in the document. Stored rather than derived so wording and translation stay fixed after generation.</inlineHelpText>
    <label>Display Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>