force-app/main/default/objects/Quote_Document_Row__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <inlineHelpText>Position of this row within the table. Rows must be consumed in this order. Never rely on record creation order or record ID.</inlineHelpText>
    <label>Display Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>