force-app/main/default/objects/Quote_Document_Row__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>Duration stated by the approved source for this Row. Start and end dates remain separate typed values.</inlineHelpText>
    <label>Duration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>