force-app/main/default/objects/Quote_Document_Row__c/fields/Effective_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Effective_Discount_Percent__c</fullName>
    <inlineHelpText>Discount as a proportion of list, computed rather than summed. On an aggregate row this is that row own discount divided by its own list amount - never the sum or the average of the child percentages, which is how a 60% discount on $1,000 and a 10% discount on $100,000 would print as 70% or 35% instead of about 10.5%. Blank when the list amount is zero.</inlineHelpText>
    <label>Effective Discount %</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>