force-app/main/default/objects/Quote_Document_Row__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>End date for the product, subscription, service, schedule, or period represented by this Row.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>