force-app/main/default/objects/Quote_Document_Row__c/fields/Group_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Group_Dimension__c</fullName>
    <inlineHelpText>The classification this row is grouped by, such as PRODUCT_FAMILY or CHARGE_TYPE. A label alone does not identify what kind of grouping it represents. Text rather than a picklist so a new dimension does not require a deployment.</inlineHelpText>
    <label>Group Dimension</label>
    <length>80</length>
    <type>Text</type>
</CustomField>