force-app/main/default/objects/Quote_Document_Row__c/fields/Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Group_Key__c</fullName>
    <inlineHelpText>Full grouping path, such as QUOTE_LINE_GROUP:PHASE_1|PRODUCT_FAMILY:HARDWARE. Distinguishes the same value appearing under different parents.</inlineHelpText>
    <label>Group Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>