force-app/main/default/objects/Quote_Document_Row__c/fields/Group_Level__c.field-meta.xml
<CustomField>
    <fullName>Group_Level__c</fullName>
    <inlineHelpText>Nesting depth. Zero is the table-level total; one is the outermost grouping. Used for indentation in the document.</inlineHelpText>
    <label>Group Level</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>