force-app/main/default/objects/Quote_Document_Row__c/fields/Group_Value__c.field-meta.xml
<CustomField>
    <fullName>Group_Value__c</fullName>
    <inlineHelpText>Normalized grouping value, independent of how it is displayed.</inlineHelpText>
    <label>Group Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>