force-app/main/default/objects/Quote_Document_Row__c/fields/Include_In_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Grand_Total__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Whether this row's amounts are included in the table grand total.</inlineHelpText>
    <label>Include In Grand Total</label>
    <type>Checkbox</type>
</CustomField>