force-app/main/default/objects/Quote_Document_Row__c/fields/Include_In_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Subtotal__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Whether this row's amounts are included in its group subtotal. Clear for rows that are displayed but not counted, such as optional products or bundled components whose price sits in the package.</inlineHelpText>
    <label>Include In Subtotal</label>
    <type>Checkbox</type>
</CustomField>