force-app/main/default/objects/Quote_Document_Row__c/fields/Is_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Is_Displayed__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Whether the document renders this row. A row may be hidden and still contribute to totals, for example a bundle component whose value is included but not shown.</inlineHelpText>
    <label>Is Displayed</label>
    <type>Checkbox</type>
</CustomField>