force-app/main/default/objects/Quote_Document_Row__c/fields/Label_Arg_1__c.field-meta.xml
<CustomField>
    <fullName>Label_Arg_1__c</fullName>
    <inlineHelpText>The value substituted for {0} in this row's label template - typically the group value, e.g. Hardware in "Hardware Subtotal". Stored so the label can be re-resolved in another locale without re-running generation, and so a test can assert what was substituted rather than parsing the finished sentence.</inlineHelpText>
    <label>Label Arg 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>