force-app/main/default/objects/Quote_Document_Row__c/fields/Label_Arg_2__c.field-meta.xml
<CustomField>
    <fullName>Label_Arg_2__c</fullName>
    <inlineHelpText>The value substituted for {1} in this row's label template. Only {0} and {1} are supported; a dictionary entry referencing {2} or higher fails at load rather than at render.</inlineHelpText>
    <label>Label Arg 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>