force-app/main/default/objects/Quote_Document_Row__c/fields/Label_Key__c.field-meta.xml
<CustomField>
    <fullName>Label_Key__c</fullName>
    <inlineHelpText>The semantic key Display Label was resolved from, e.g. SUBTOTAL or GRAND_TOTAL. Display Label is the already-localized wording a renderer prints; this is what it MEANS, which is what styling, testing and re-translation should key off. Blank on a detail row, whose label is data (a product name) rather than a dictionary string.</inlineHelpText>
    <label>Label Key</label>
    <length>60</length>
    <type>Text</type>
</CustomField>