force-app/main/default/objects/Quote_Document_Row__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <inlineHelpText>Product code as it appeared when generated.</inlineHelpText>
    <label>Product Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>