force-app/main/default/objects/Quote_Document_Row__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <inlineHelpText>Customer-facing product or service description carried as Row data so it can appear beneath the product name.</inlineHelpText>
    <label>Product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>