force-app/main/default/objects/Quote_Document_Row__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <inlineHelpText>Product family as it appeared when generated.</inlineHelpText>
    <label>Product Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>