force-app/main/default/objects/Quote_Document_Row__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <inlineHelpText>Product name as it appeared when generated. Preserved so a document stays reproducible if the Product is later renamed.</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>