force-app/main/default/objects/Quote_Document_Row__c/fields/Quote_Document_Table__c.field-meta.xml
<CustomField>
    <fullName>Quote_Document_Table__c</fullName>
    <inlineHelpText>The table this row belongs to.</inlineHelpText>
    <label>Quote Document Table</label>
    <referenceTo>Quote_Document_Table__c</referenceTo>
    <relationshipLabel>Rows</relationshipLabel>
    <relationshipName>Rows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>