force-app/main/default/objects/Quote_Document_Row__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Quote Line this row was generated from. Populated on detail rows only; blank on headers and totals.</inlineHelpText>
    <label>Source Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Document Rows</relationshipLabel>
    <relationshipName>DocumentRows</relationshipName>
    <type>Lookup</type>
</CustomField>