force-app/main/default/objects/Quote_Document_Row__c/fields/Row_Key__c.field-meta.xml
<CustomField>
    <fullName>Row_Key__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Stable identifier for this row within its table, such as SUBTOTAL:PRODUCT_FAMILY:HARDWARE. Supports regeneration without duplicates.</inlineHelpText>
    <label>Row Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>