force-app/main/default/objects/Quote_Document_Row__c/fields/Row_Type__c.field-meta.xml
<CustomField>
    <fullName>Row_Type__c</fullName>
    <inlineHelpText>What this row represents. Determines how a document renders it and whether it contributes to totals. Subtotal is the total for a grouping node, Section Total the total for a logical portion of the table such as Recurring, Grand Total the final total for the whole table. Discount, Rounding and Note are customizer-only rows with no declarative config path - see QuoteDocumentRowCustomizer.</inlineHelpText>
    <label>Row Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group Header</fullName>
            </value>
            <value>
                <fullName>Detail</fullName>
            </value>
            <value>
                <fullName>Subtotal</fullName>
            </value>
            <value>
                <fullName>Section Total</fullName>
            </value>
            <value>
                <fullName>Grand Total</fullName>
            </value>
            <value>
                <fullName>Informational</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Rounding</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>