force-app/main/default/objects/Quote_Document_Row__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Start date for the product, subscription, service, schedule, or period represented by this Row.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>