force-app/main/default/objects/Quote_Document_Row__c/fields/Table_Key__c.field-meta.xml
<CustomField>
    <fullName>Table_Key__c</fullName>
    <description>Stable key used to attach a contributed Row to its Table before records have Salesforce IDs.</description>
    <label>Table Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>