force-app/main/default/objects/Quote_Document_Row__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <inlineHelpText>Tax amount supplied by the approved tax or pricing source for this Row.</inlineHelpText>
    <label>Tax Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>