force-app/main/default/objects/Quote_Document_Row__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <inlineHelpText>Why this row contributes to a change measure. Blank on rows that combine multiple transaction types and on tables using the price waterfall measure set.</inlineHelpText>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net New</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Replacement Removed</fullName>
            </value>
            <value>
                <fullName>Replacement Added</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>