force-app/main/default/objects/Quote_Document_Row__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <inlineHelpText>Approved unit price for this detail Row. The composer copies it from the pricing source and never derives it in an output service.</inlineHelpText>
    <label>Unit Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>