force-app/main/default/objects/Quote_Document_Row__c/validationRules/Grand_Total_Level_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Grand_Total_Level_Zero</fullName>
    <active>true</active>
    <description>The grand total belongs to the table, not to any grouping node, so it sits at level zero.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Row_Type__c, &quot;Grand Total&quot;),
  Group_Level__c &lt;&gt; 0
)</errorConditionFormula>
    <errorMessage>A Grand Total row must have Group Level 0.</errorMessage>
</ValidationRule>