force-app/main/default/objects/Quote_Document_Row__c/validationRules/Removal_Signs_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Removal_Signs_Negative</fullName>
    <active>true</active>
    <description>Removals are always stored negative so that the change measures can simply be summed.</description>
    <errorConditionFormula>OR(
  Amount_Cancellation__c &gt; 0,
  Amount_Replacement_Removed__c &gt; 0,
  Amount_Termination__c &gt; 0
)</errorConditionFormula>
    <errorMessage>Cancellation, Replacement Removed and Termination amounts must be zero or negative.</errorMessage>
</ValidationRule>